styles/app.css
/* ... */
@media (max-width: 360px) {

    .header {
        padding: 16px 0;
    }

    .hero-content {
        padding: 12px 0;
    }

    .hero-subtitle {
        font-size: 10px;
    }

    .hero-subtitle::before {
        height: 1px;
    }

    .hero-title {
        font-size: 34px;
        line-height: 38px;
        margin-top: 4px;
    }

    .hero-description {
        width: auto;
        max-width: 280px;
        line-height: 24px;
    }

    .hero-btn {
        flex-direction: row;
        width: 50%;
        align-self: center;
        margin-top: 80px;
        background: inherit;
    }
    
    .icon-search-overlay {
        width: 32px;
    }

    .search-modal__title {
        font-size: 24px;
    }

    .search-form {
        gap: 5px;
    }

    .search-input {
        width: 100%;
    }

    .search-submit {
        position: static;
    }

    .search-modal__hint {
        font-size: 14px;
    }

    .articles-label {
        font-size: 14px;
    }

    .articles-title {
        font-size: 26px;
    }

    .newsletter__label {
        font-size: 26px;
    }

    .newsletter__form {
        align-items: center;
    }

    .newsletter__description {
        font-size: 16px;
    }

    .newsletter__button {
        position: static;
        display: block;
    }

    .about__label {
        font-size: 12px;
    }

    .about__title {
        font-size: 24px;
    }

    .about__description {
        font-size: 14px;
    }

    .about__stat-number {
        font-size: 24px;
    }

    .about__stat-label {
        font-size: 18px;
    }
}

